fix: spacing between first item and title

--- a/frappe/public/scss/website/page_builder.scss
+++ b/frappe/public/scss/website/page_builder.scss
@@ -522,7 +522,7 @@
 	.section-description, .collapsible-items {
 		margin-left: auto;
 		margin-right: auto;
-		margin-top: 1.5rem;
+		margin-top: 3rem;
 	}
 }
 
